Fix dark mode issues

--- a/static/css/ansible.css
+++ b/static/css/ansible.css
@@ -7,7 +7,7 @@
 }
 
 .ansible-skipped {
-    color: #0000ff;
+    color: #4ea1ff;
 }
 
 .ansible-fatal {
