--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -4,11 +4,11 @@ body.dark-mode {
     color: #d3d3d3;
 }
 
-.dark-mode .modal div,
+.dark-mode .modal div:not([class*="ansible-"]),
 .dark-mode .modal input,
 .dark-mode .modal-credentials__bg pre {
-    background-color: #2a2a2a;
-    color: #d3d3d3;
+    background-color: #2a2a2a !important;
+    color: #d3d3d3 !important;
 }
 
 .dark-mode .modal-get-device-state-snapshot__bg div,
@@ -59,40 +59,32 @@ body.dark-mode {
     color: #fff !important;
 }
 
-/* Subtle highlight for sorted column */
-.dark-mode .dataTables_wrapper table.dataTable thead th.sorting,
-.dark-mode .dataTables_wrapper table.dataTable thead th.sorting_asc,
-.dark-mode .dataTables_wrapper table.dataTable thead th.sorting_desc {
-    background-color: #2a2a2a !important; /* Subtler highlight */
-    color: #d3d3d3 !important;
-}
-
-/* Sorted column cells in the body */
-.dark-mode .dataTables_wrapper table.dataTable tbody td.sorting_1,
-.dark-mode .dataTables_wrapper table.dataTable tbody td.sorting_2,
-.dark-mode .dataTables_wrapper table.dataTable tbody td.sorting_3 {
-    background-color: #333 !important; /* Slightly lighter for sorted cells */
-}
-
-/* Dark Mode: Odd and even row highlights */
+/* Highlight odd and even rows */
 .dark-mode .dataTables_wrapper table.dataTable tbody tr:nth-child(odd) {
-    background-color: #1e1e1e !important; /* Darker background for odd rows */
+    background-color: #1e1e1e !important;
 }
 
 .dark-mode .dataTables_wrapper table.dataTable tbody tr:nth-child(even) {
-    background-color: #2a2a2a !important; /* Lighter background for even rows */
+    background-color: #2a2a2a !important;
 }
 
-/* Dark Mode: Force highlight for selected rows */
+/* Highlight selected rows */
 .dark-mode .dataTables_wrapper table.dataTable tbody tr.selected {
-    background-color: #444 !important; /* Darker selected row */
-    color: #d3d3d3 !important; /* Ensure white text */
+    background-color: #444 !important;
+    color: #d3d3d3 !important;
 }
 
-/* Sorted column cells in the body */
+/* Highlight sorted columns */
+.dark-mode .dataTables_wrapper table.dataTable tbody td.sorting_1,
+.dark-mode .dataTables_wrapper table.dataTable tbody td.sorting_2,
+.dark-mode .dataTables_wrapper table.dataTable tbody td.sorting_3 {
+    background-color: #303030 !important;
+}
+
+/* Hightligh sorted column cells */
 .dark-mode .dataTables_wrapper table.dataTable tbody tr.selected td.sorting_1,
 .dark-mode .dataTables_wrapper table.dataTable tbody tr.selected td.sorting_2,
 .dark-mode .dataTables_wrapper table.dataTable tbody tr.selected td.sorting_3 {
-    background-color: #444 !important; /* Slightly lighter for selected sorted cells */
-    color: #d3d3d3 !important; /* Ensure text is visible */
+    background-color: #444 !important;
+    color: #d3d3d3 !important;
 }
